# optimalbot-portal

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  01_Dial-In-Implementation.md  02_S2S-Implementation.md  AUDIT_ISSUES.md  CLAUDE.md  Codebase_Explained.md  Dockerfile  Dockerfile.api  Dockerfile.api.dockerignore  Dockerfile.bot  Dockerfile.bot.dockerignore  Dockerfile.obsolete-monolithic  Dockerfile.obsolete-runner  Documentation.md  Goals - 10.12.2025  Implementation.md  Implementation_v01.md  Implementation_v02.md  Next steps.md  NextSteps.md  README.md  REFACTOR_PLAN.md  SUMMARY.md  Stage_1.md  Stage_2_completed.md  Stage_3.md  Stage_4.md  Stage_5.md  Stage_6.md  Stage_7.md  TESTING_WORKFLOW.md  Task_current_robot.md  WarmTransferImplementation.md  app.py  bot.py  bot_validation.py  (+42 more)
.github/workflows/: ci.yml
OtherFiles/: .env.example  fly.toml.backup
Z_OtherFiles/: Frontend.md  env.old  test_daily_connection.py  test_models.py
backend/: CLAUDE.md  ImproveBackend.md  alerts.py  audit.py  config.py  constants.py  database.py  dependencies.py  exceptions.py  functions.py  lifespan.py  main.py  metrics.py  middleware.py  models.py  resilience.py  schemas.py  server_utils.py  sessions.py  utils.py  webhooks.py
backend/api/: admin.py  auth.py  calls.py  dialin.py  dialout.py  health.py  metrics.py  onboarding.py  patients.py  sessions.py  sms.py  webhooks.py
backend/costs/: __init__.py  excel_export.py  routes.py  service.py
backend/models/: __init__.py  onboarding_conversation.py  organization.py  patient.py  patient_user.py  user.py
backend/services/: transcription.py
clients/demo_clinic_alpha/: dialin_base_flow.py  dialout_base_flow.py
clients/demo_clinic_beta/: __init__.py
clients/prior_auth/: flow_definition.py  prompts.yaml  schema.yaml  services.yaml
config/: pricing.yaml
core/: __init__.py  client_loader.py  context.py  conversation_context.py  data_formatter.py  flow_loader.py  prompt_renderer.py  schema_parser.py  state_manager.py
costs/: calculator.py  fixed_costs.yaml  variable_costs.yaml
docs/: MultiTenantDesign.md  docs.md  start-bots.md
engine/: __init__.py  conversation_context.py  data_formatter.py  prompt_renderer.py  schema_loader.py
evals/: README.md  context.py  db.py  fixtures.py
evals/demo_clinic_beta/: __init__.py
evals/ivr/: INTEGRATION_TEST_SETUP.md  README.md  __init__.py  framework.py  graders.py  integration_test.py  ivr_example.json  results_viewer.py  run.py  test_generator.py  test_server.py  test_server_deprecated.py  twilio_ivr_server.py  viewer.py
evals/llm/: framework.py  (+3 more)
frontend/: .env.development  .env.example  .env.production  .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
handlers/: __init__.py  function.py  ivr.py  safety.py  transcript.py  transport.py  triage.py  voicemail.py  warm_transfer.py
monitoring/: __init__.py  collector.py  emitter.py  models.py  otel_processor.py  otel_setup.py
observers/: __init__.py  latency_observer.py  llm_context_observer.py  usage_observer.py
pipeline/: audio_processors.py  fixed_ivr_navigator.py  ivr_human_detector.py  ivr_navigation_processor.py  observer.py  pipeline_factory.py  runner.py  safety_monitor.py  safety_processors.py  safety_prompts.py  session.py  transcript_logger.py  triage_detector.py  triage_processors.py  types.py
scripts/: add_patient_intake_workflow.py  add_patient_intake_workflow_alpha.py  add_patient_questions_workflow.py  remove_supervisor_phone_field.py  setup_multi_tenant.py  update_beta_schema.py
services/: service_factory.py
testing/: .env.testing
tests/: test_intent_classifier.py  test_schema_loader.py  test_stage2.py
utils/: function_call_text_filter.py  print_tree.py  spelling_text_filter.py
(+184 files in other folders)
