[project]
name = "healthcare-voice-ai"
version = "1.0.0"
description = "Healthcare voice AI - full local development (backend + bot)"
requires-python = ">=3.10"
dependencies = [
    # ===========================================
    # Bot dependencies (mirrors pyproject.bot.toml)
    # ===========================================
    # Pipecat AI
    "pipecat-ai[daily,cartesia,deepgram,groq,tracing]",
    "pipecat-ai-flows",
    "pipecat-ai-whisker",
    "pipecatcloud",

    # LLM providers
    "anthropic",

    # Observability
    "langfuse",

    # ===========================================
    # Backend dependencies
    # ===========================================
    # Web framework
    "uvicorn",
    "fastapi",
    "python-multipart",

    # HTTP clients
    "aiohttp",
    "httpx",

    # Transcription
    "assemblyai",

    # Authentication
    "passlib[bcrypt]",
    "python-jose[cryptography]",

    # MFA (Two-Factor Authentication)
    "pyotp>=2.9.0",
    "qrcode[pil]>=7.4",

    # Email alerting
    "aiosmtplib>=3.0.0",

    # Rate limiting
    "slowapi",

    # Caching
    "cachetools",

    # ===========================================
    # Shared dependencies
    # ===========================================
    # Database
    "motor",

    # Utilities
    "pyyaml",
    "pydantic",
    "tenacity",
    "phonenumbers",
    "python-dateutil",
    "python-dotenv",
    "loguru",

    # Excel export
    "openpyxl>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
]

[tool.ruff]
exclude = [".git", "__pycache__", "*.pyc"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E402"]  # E402: module-level imports not at top (intentional for path setup)

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "off"
exclude = ["**/node_modules", "**/__pycache__", ".venv", "whisker", "pipecat_src", "evals/**/deprecated", "evals/**/*_deprecated*"]
# Start lenient - catch import errors and undefined names only
# Tighten over time by changing typeCheckingMode to "basic" then "standard"
reportMissingImports = "error"
reportMissingTypeStubs = false
reportUndefinedVariable = "error"
